// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2EDataAttribute matches snapshot 1`] = `
<DocumentFragment>
  <span
    data-test-component-block="1"
  >
    child
  </span>
</DocumentFragment>
`;

exports[`E2EDataAttribute matches snapshot 2`] = `
<DocumentFragment>
  <span>
    child
  </span>
</DocumentFragment>
`;
